Added cookie authentication methods, created a login page, front page, and added a logout page to give the website more functionality

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
+{% block content %}
 
   <h1> My Blog</h1>
 
@@ -12,4 +12,4 @@
     </p>
   {% endfor %}
 
-</html>
+{% endblock %}
