--- a/templates/blogPost.html
+++ b/templates/blogPost.html
@@ -2,12 +2,26 @@
 
 {% block content %}
 
-  <h1> Specific Blog Post</h1>
-
   <h2> {{not_found}}</h2>
 
+  <form method="post">
+    <label>
+      <h2> Title </h2>
+      <input type = "text" name = "title" >
+    </label>
+
+    <label>
+      <h2> Content </h2>
+      <textarea name="content"></textarea>
+    </label>
+
+    <br>
+    <input type="submit" >
+
+  </form>
+
   {%if blog_query%}
-    <h2> {{blog_query.title}} </h2>
+    <h1> {{blog_query.title}} </h1>
     <h3> {{blog_query.author}} Date: {{blog_query.created}}</h3>
     <p>
       {{blog_query.content}}
@@ -15,4 +29,20 @@
     <br>
     <p>{{blog_query.likes}}</p>
   {% endif %}
+
+  <h1> Latest Comments Posts </h1>
+  <hr>
+
+  {% for comment in comments %}
+
+    <a href="blogPost?blog_post_id={{comment.key.id()}}"> {{comment.title}} </a>
+    <h3> {{comment.author}} Date: {{comment.created}}</h3>
+    <p>
+      {{comment.content}}
+    </p>
+    <br>
+    <p>{{comment.likes}}</p>
+
+  {% endfor %}
+
 {% endblock %}
