--- a/templates/blogPost.html
+++ b/templates/blogPost.html
@@ -4,21 +4,6 @@
 
   <h2> {{not_found}}</h2>
 
-  <form method="post">
-    <label>
-      <h2> Title </h2>
-      <input type = "text" name = "title" >
-    </label>
-
-    <label>
-      <h2> Content </h2>
-      <textarea name="content"></textarea>
-    </label>
-
-    <br>
-    <input type="submit" >
-
-  </form>
 
   {%if blog_query%}
     <h1> {{blog_query.title}} </h1>
@@ -28,21 +13,45 @@
     </p>
     <br>
     <p>{{blog_query.likes}}</p>
-  {% endif %}
 
-  <h1> Latest Comments Posts </h1>
-  <hr>
 
-  {% for comment in comments %}
+    <hr>
 
-    <a href="blogPost?blog_post_id={{comment.key.id()}}"> {{comment.title}} </a>
-    <h3> {{comment.author}} Date: {{comment.created}}</h3>
-    <p>
-      {{comment.content}}
-    </p>
+    <form method="post">
+      <label>
+        <h2> Title </h2>
+        <input type = "text" name = "title" >
+      </label>
+
+      <label>
+        <h2> Content </h2>
+        <textarea name="content"></textarea>
+      </label>
+
+      <br>
+      <input type="submit" >
+
+    </form>
+
     <br>
-    <p>{{comment.likes}}</p>
+    <hr>
 
-  {% endfor %}
 
+
+    <h1> Latest Comments Posts </h1>
+    <hr>
+
+    {% for comment in comments %}
+
+      <h2> {{comment.title}} </h2>
+      <h3> {{comment.author}} Date: {{comment.created}}</h3>
+      <p>
+        {{comment.content}}
+      </p>
+      <br>
+      <p>{{comment.likes}}</p>
+
+    {% endfor %}
+
+  {% endif %}
 {% endblock %}
