--- a/templates/post.html
+++ b/templates/post.html
@@ -27,14 +27,16 @@
 
   {% for post in post_query %}
 
-    <a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a>
+    <h1><a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a></h1>
     <h3> {{post.author}} Date: {{post.created}}</h3>
     <p>
       {{post.content}}
     </p>
     <br>
     <p>{{post.likes}}</p>
+    <a href="editPost?blog_post_id={{post.key.id()}}"> Edit post? </a>
 
+    <br>
   {% endfor %}
 
 {% endblock %}
