Deleted duplicate EditPostPage handler...must have accidentally added in my sleepy state? Also fixed deletePostPage to take in user's yes/no input

--- a/templates/post.html
+++ b/templates/post.html
@@ -35,7 +35,7 @@
     <br>
     <p>{{post.likes}}</p>
     <a href="editPost?blog_post_id={{post.key.id()}}"> Edit post? </a>
-
+    <a href="deletePost?blog_post_id={{post.key.id()}}"> Delete post? </a>
     <br>
   {% endfor %}
 
