--- a/templates/deletePost.html
+++ b/templates/deletePost.html
@@ -20,7 +20,7 @@
       <h2> Are you sure you want to delete the following post? </h2>
     </label>
 
-    <input type="radio" name="q1" value="1">Yes
+    <input type="radio" name="q1" value="1" checked="checked">Yes
     <input type="radio" name="q1" value="0">No
 
     <input type="submit" >
