--- a/templates/post.html
+++ b/templates/post.html
@@ -36,6 +36,9 @@
     <p>{{post.likes}}</p>
     <a href="editPost?blog_post_id={{post.key.id()}}"> Edit post? </a>
     <a href="deletePost?blog_post_id={{post.key.id()}}"> Delete post? </a>
+    <a href ="vote?blog_post_id={{post.key.id()}}&value=1">Upvote!</a>
+    <a href ="vote?blog_post_id={{post.key.id()}}&value=-1">Downvote!</a>
+
     <br>
   {% endfor %}
 
