--- a/templates/post.html
+++ b/templates/post.html
@@ -3,43 +3,22 @@
 {% block content %}
 
   <h1> Submit your own Post! </h1>
-  <hr >
+  <hr>
 
   <form method="post">
     <label>
       <h2> Title </h2>
-      <input type = "text" name = "title" >
+      <input type = "text" name = "title" required = true >
     </label>
 
     <label>
       <h2> Content </h2>
-      <textarea name="content"></textarea>
+      <textarea name="content" required = true></textarea>
     </label>
 
     <br>
-    <input type="submit" >
+    <input type="submit">
 
   </form>
-
-
-  <h1> Latest Blog Posts </h1>
-  <hr>
-
-  {% for post in post_query %}
-
-    <h1><a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a></h1>
-    <h3> {{post.author}} Date: {{post.created}}</h3>
-    <p>
-      {{post.content}}
-    </p>
-    <br>
-    <p>{{post.likes}}</p>
-    <a href="editPost?blog_post_id={{post.key.id()}}"> Edit post? </a>
-    <a href="deletePost?blog_post_id={{post.key.id()}}"> Delete post? </a>
-    <a href ="vote?blog_post_id={{post.key.id()}}&value=1">Upvote!</a>
-    <a href ="vote?blog_post_id={{post.key.id()}}&value=-1">Downvote!</a>
-
-    <br>
-  {% endfor %}
 
 {% endblock %}
