--- a/templates/blogPost.html
+++ b/templates/blogPost.html
@@ -21,7 +21,7 @@
   <form method="post">
 
     <label>
-      <h2> Content </h2>
+      <h2> Comment </h2>
       <textarea name="content"></textarea>
     </label>
 
@@ -35,7 +35,7 @@
 
 
 
-  <h1> Latest Comments Posts </h1>
+  <h1> Latest Comments</h1>
   <hr>
 
   {% for comment in comments %}
