--- a/templates/editPost.html
+++ b/templates/editPost.html
@@ -16,10 +16,13 @@
 
   {% if not error %}
     <form method="post">
-      <label>
-        <h2> Title </h2>
-        <input type = "text" name = "title" >
-      </label>
+
+      {% if blog_query.isRoot == True %}
+        <label>
+          <h2> Title </h2>
+          <input type = "text" name = "title" >
+        </label>
+      {% endif %}
 
       <label>
         <h2> Content </h2>
