Added return statements to each cookie check because I believe that the python code still executes even after a redirect

--- a/templates/editPost.html
+++ b/templates/editPost.html
@@ -31,6 +31,7 @@
 
       <br>
       <input type="submit" >
+      <a href = "blogPost?blog_post_id={{blog_query.key.id()}}" > Cancel </a>
 
     </form>
   {% else %}
