Installed Grunt and configured the Gruntfile.js in order to minifiy the html,css, js, compress images(although there are none now), and compile SASS

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title> Multi User Blog </title>
-    <meta name ="description" content="This page contains information about Jonathan Luu ">
-
-    <link href="/FrontEnd/css/bootstrap.css" rel="stylesheet">
-
-    {% block additonal_header %}
-    {% endblock %}
-  </head>
-
-  <nav class="navbar navbar-default navbar-inverse navbar-fixed-top " style="padding-top:10px; padding-bottom: 10px;" >
-    <div class = "container text">
-  	  <button type="button" class="navbar-toggle" data-toggle = "collapse" data-target=".navbar-collapse">
-	  	  <span class = "sr-only"> Toggle navigation </span>
-	  		<span class ="icon-bar"> </span>
-				<span class ="icon-bar"> </span>
-				<span class ="icon-bar"> </span>
-  	  </button>
-
-  	  <a class = "navbar-brand" href="#top"> WELCOME </a>
-
-		  <div class ="navbar-collapse collapse">
-	  		<ul class ="nav navbar-nav navbar-right">
-			  	<a class = "navbar-brand" href="#Projects"> Projects </a>
-				</ul>
-
-
-	  		<ul class ="nav navbar-nav navbar-right">
-	  		  <a class = "navbar-brand" href="#Experience"> Experience </a>
-	  		</ul>
-
-	  		<ul class ="nav navbar-nav navbar-right">
-	  		  <a class = "navbar-brand" href="#Skills"> Skills </a>
-	  		</ul>
-
-				<ul class ="nav navbar-nav navbar-right">
-				  <a class= "navbar-brand" href="#AboutMe"> About Me </a>
-		 		</ul>
-	  	</div>
-
-  	</div>
-  </nav>
-
-
-  <body>
-    {% block content %}
-    {% endblock %}
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/FrontEnd/js/bootstrap.js"></script>
-
-  </body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Multi User Blog</title><meta name="description" content="This page contains information about Jonathan Luu "><link href="/FrontEnd/build/css/production.min.css" rel="stylesheet">{% block additonal_header %} {% endblock %}</head><nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-style"><div class="container text"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle navigation </span><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="/">WELCOME</a><div class="navbar-collapse collapse"><ul class="nav navbar-nav navbar-right"><a class="navbar-brand" href="/createPost">Create Post</a></ul></div></div></nav><body><div class="container">{% block content %} {% endblock %}</div><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><script src="/FrontEnd/build/js/production.min.js"></script></body></html>
