--- a/templates/login.html
+++ b/templates/login.html
@@ -1,27 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-  <h1> Login</h1>
-
-  <form method = "post">
-   <label> Username </label>
-   <input type = "text" name = "username" value = "{{username}}" required=true >
-   <br>
-
-   <label> Password </label>
-   <input type = "password" name = "password" value = "{{password}}" required=true>
-   <br>
-
-   <div> {{error}}</div>
-
-   </div>
-   <input type = "submit">
-   <input type = "reset" >
-  </form>
-
-  <div>
-     <a href="signup"> Sign up?</a>
-  </div>
-
-{% endblock %}
+{% extends "base.html" %} {% block content %}<h1>Login</h1><form method="post"><label>Username</label><input type="text" name="username" value="{{username}}" required="true"><br><label>Password</label><input type="password" name="password" value="{{password}}" required="true"><br><div>{{error}}</div><input type="submit"> <input type="reset"></form><div><a href="signup">Sign up?</a></div>{% endblock %}
