--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,35 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-  <h1> Signup</h1>
-
-  <form method = "post">
-   <label> Username </label>
-   <input type = "text" name = "username" value = "{{username}}" required=true >
-   <br>
-
-   <label> Password </label>
-   <input type = "password" name = "password" value = "{{password}}" required=true>
-   <br>
-
-
-   <label> Verify password </label>
-   <input type = "password" name = "verifypw" value = "{{verifypw}}" required=true>
-   <br>
-
-   <label> Email (optional) </label>
-   <input type = "text" name = "email" value = "{{email}}">
-   <br>
-
-   <div> {{errorUser}}</div>
-   <div> {{errorPass}}</div>
-
-   </div>
-   <input type = "submit">
-   <input type = "reset" >
-  </form>
-
-  <p> Have an account? </p>
-  <a href="login"> Login here</a>
-{% endblock %}
+{% extends "base.html" %} {% block content %}<h1>Signup</h1><form method="post"><label>Username</label><input type="text" name="username" value="{{username}}" required="true"><br><label>Password</label><input type="password" name="password" value="{{password}}" required="true"><br><label>Verify password</label><input type="password" name="verifypw" value="{{verifypw}}" required="true"><br><label>Email (optional)</label><input type="text" name="email" value="{{email}}"><br><div>{{errorUser}}</div><div>{{errorPass}}</div><input type="submit"> <input type="reset"></form><p>Have an account?</p><a href="login">Login here</a> {% endblock %}
