--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,16 +1,1 @@
-{% extends "base.html" %}
-
-{% block additonal_header %}
-
-  <meta http-equiv="refresh" content="5;URL='https://iconic-computer-148708.appspot.com/'">
-
-{% endblock %}
-
-
-{% block content %}
-
-  <h1> Welcome {{username}} !!</h1>
-  <h2> Redirecting to main page in 5 seconds...</h2>
-
-
-{% endblock %}
+{% extends "base.html" %} {% block additonal_header %}<meta http-equiv="refresh" content="5;URL='https://iconic-computer-148708.appspot.com/'">{% endblock %} {% block content %}<h1>Welcome {{username}} !!</h1><h2>Redirecting to main page in 5 seconds...</h2>{% endblock %}
