--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -1,23 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-<h1> Latest Blog Posts </h1>
-<hr>
-
-{% for post in post_query %}
-
-  <h1><a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a></h1>
-  <h3> {{post.author}} Date: {{post.created}}</h3>
-  <p>
-    {{post.content}}
-  </p>
-  <br>
-  <p>{{post.likes}}</p>
-  <a href ="vote?blog_post_id={{post.key.id()}}&value=1">Upvote!</a>
-  <a href ="vote?blog_post_id={{post.key.id()}}&value=-1">Downvote!</a>
-
-  <br>
-{% endfor %}
-
-{% endblock %}
+{% extends "base.html" %} {% block content %}<h1>Latest Blog Posts</h1><hr>{% for post in post_query %}<h1><a href="blogPost?blog_post_id={{post.key.id()}}">{{post.title}}</a></h1><h3>{{post.author}} Date: {{post.created}}</h3><p>{{post.content}}</p><br><p>{{post.likes}}</p><a href="vote?blog_post_id={{post.key.id()}}&value=1">Upvote!</a> <a href="vote?blog_post_id={{post.key.id()}}&value=-1">Downvote!</a><br>{% endfor %} {% endblock %}
