--- a/templates/notFound.html
+++ b/templates/notFound.html
@@ -1,8 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-<h1> Blog Not Found!</h1>
-<h3> You can create one <a href='createPost'> here </a> though</h3>
-
-{% endblock %}
+{% extends "base.html" %} {% block content %}<h1>Blog Not Found!</h1><h3>You can create one <a href="createPost">here </a>though</h3>{% endblock %}
