--- a/templates/post.html
+++ b/templates/post.html
@@ -1,24 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-  <h1> Submit your own Post! </h1>
-  <hr>
-
-  <form method="post">
-    <label>
-      <h2> Title </h2>
-      <input type = "text" name = "title" required = true >
-    </label>
-
-    <label>
-      <h2> Content </h2>
-      <textarea name="content" required = true></textarea>
-    </label>
-
-    <br>
-    <input type="submit">
-
-  </form>
-
-{% endblock %}
+{% extends "base.html" %} {% block content %}<h1>Submit your own Post!</h1><hr><form method="post"><label><h2>Title</h2><input type="text" name="title" required="true"></label><label><h2>Content</h2><textarea name="content" required="true"></textarea></label><br><input type="submit"></form>{% endblock %}
