Fixed Grunt Watch and add top margins to Base.html

--- a/FrontEnd/assets/sass/custom.scss
+++ b/FrontEnd/assets/sass/custom.scss
@@ -13,12 +13,10 @@ $screen-lg-min: 1200px;
 .navbar-style{
   padding-top:10px;
   padding-bottom: 10px;
-  margin-bottom: 50px;
 }
 
 .top{
-
-
+  margin-top: 80px;
 }
 
 /* Logo */
