--- a/FrontEnd/assets/css/custom.css
+++ b/FrontEnd/assets/css/custom.css
@@ -1,7 +1,9 @@
 .navbar-style {
   padding-top: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 50px; }
+  padding-bottom: 10px; }
+
+.top {
+  margin-top: 80px; }
 
 /* Logo */
 .logo {
