--- a/templates/assets/base.html
+++ b/templates/assets/base.html
@@ -14,30 +14,32 @@
     {% endblock %}
   </head>
 
-  <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-style">
-
-    <div class = "container text">
-  	  <button type="button" class="navbar-toggle" data-toggle = "collapse" data-target=".navbar-collapse">
-	  	  <span class = "sr-only"> Toggle navigation </span>
-	  		<span class ="icon-bar"> </span>
-				<span class ="icon-bar"> </span>
-				<span class ="icon-bar"> </span>
-  	  </button>
-
-  	  <a class = "navbar-brand" href="/"> WELCOME </a>
-
-		  <div class ="navbar-collapse collapse">
-	  		<ul class ="nav navbar-nav navbar-right">
-			  	<a class = "navbar-brand" href="/createPost"> Create Post </a>
-				</ul>
-	  	</div>
-
-  	</div>
-  </nav>
-
-
   <body>
-    <div class = "container">
+
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-style">
+
+      <div class = "container">
+    	  <button type="button" class="navbar-toggle" data-toggle = "collapse" data-target=".navbar-collapse">
+      	  <span class = "sr-only"> Toggle navigation </span>
+      		<span class ="icon-bar"> </span>
+    			<span class ="icon-bar"> </span>
+    			<span class ="icon-bar"> </span>
+    	  </button>
+
+    	  <a class = "navbar-brand" href="/"> WELCOME </a>
+
+    	  <div class ="navbar-collapse collapse">
+      		<ul class ="nav navbar-nav navbar-right">
+    		  	<a class = "navbar-brand" href="/createPost"> Create Post </a>
+    			</ul>
+      	</div>
+
+    	</div>
+    </nav>
+
+
+
+    <div class = "container top">
 
     {% block content %}
     {% endblock %}
