--- a/templates/assets/base.html
+++ b/templates/assets/base.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-style">
+    <nav class="navbar navbar-default navbar-fixed-top navbar-style">
 
       <div class = "container">
     	  <button type="button" class="navbar-toggle" data-toggle = "collapse" data-target=".navbar-collapse">
