--- a/templates/assets/post.html
+++ b/templates/assets/post.html
@@ -2,23 +2,31 @@
 
 {% block content %}
 
-  <h1> Submit your own Post! </h1>
-  <hr>
+  <div class="row">
+    <div class="col-md-12">
+      <h1> Submit your own Post! </h1>
+      <hr>
+    </div>
+  </div>
 
-  <form method="post">
-    <label>
-      <h2> Title </h2>
-      <input type = "text" name = "title" required = true >
-    </label>
+  <div class = "row">
+    <div class="col-md-12">
 
-    <label>
-      <h2> Content </h2>
-      <textarea name="content" required = true></textarea>
-    </label>
+      <form method="post">
+        <div class="form-group">
+          <label for="male"> Subject: </label>
+          <input type="text" class="form-control" name="title" required=true>
+        </div>
 
-    <br>
-    <input type="submit">
+        <div class="form-group">
+          <label for="content"> Post Content: </label>
+          <textarea name="content" class="form-control" required=true rows="10"></textarea>
+        </div>
 
-  </form>
+        <button type="submit" class="btn btn-default"> Submit </button>
+      </form>
+
+    </div>
+  </div>
 
 {% endblock %}
