--- a/templates/assets/blogPost.html
+++ b/templates/assets/blogPost.html
@@ -2,23 +2,51 @@
 
 {% block content %}
   <section class = "row">
-    <h1> {{blog_query.title}} </h1>
-  </section>
-  <section class = "row">
-    <h3> {{blog_query.author}} Created: {{blog_query.created}}</h3>
+    <div class="col-md-12">
+      <h1> {{blog_query.title}} </h1>
+    </div>
 
-  </section>
-  <section class = "row">
-    <p>
-      {{blog_query.content}}
-    </p>
-    <br>
-    <p>{{blog_query.likes}}</p>
+    <div class="col-md-12">
+      <h3> {{blog_query.author}} Created: {{blog_query.created}}</h3>
+    </div>
 
-    <a href="editPost?blog_post_id={{blog_query.key.id()}}"> Edit comment? </a>
-    <a href="deletePost?blog_post_id={{blog_query.key.id()}}"> Delete comment? </a>
-    <a href="vote?blog_post_id={{blog_query.key.id()}}&value=1">Upvote!</a>
-    <a href="vote?blog_post_id={{blog_query.key.id()}}&value=-1">Downvote!</a>
+    <div class="col-md-12">
+      <p> {{blog_query.content}} </p>
+    </div>
+
+    <div class="col-md-12">
+      <p> Vote Count: {{blog_query.likes}}</p>
+    </div>
+
+    <div class="col-md-12">
+
+      <a href="editPost?blog_post_id={{blog_query.key.id()}}">
+        <button type="button" class="btn btn-default btn-md">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true" ></span>
+        </button>
+      </a>
+
+      <a href="deletePost?blog_post_id={{blog_query.key.id()}}">
+        <button type="button" class="btn btn-default btn-md">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true" ></span>
+        </button>
+      </a>
+
+      <a href="vote?blog_post_id={{blog_query.key.id()}}&value=1">
+        <button type="button" class="btn btn-default btn-md">
+          <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" ></span>
+        </button>
+      </a>
+
+      <a href="vote?blog_post_id={{blog_query.key.id()}}&value=-1">
+        <button type="button" class="btn btn-default btn-md">
+          <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" ></span>
+        </button>
+      </a>
+
+    </div>
+
+
   </section>
 
   <hr>
