--- a/templates/assets/frontPage.html
+++ b/templates/assets/frontPage.html
@@ -2,22 +2,39 @@
 
 {% block content %}
 
-<h1> Latest Blog Posts </h1>
-<hr>
+  <section class="row">
 
-{% for post in post_query %}
+    <div class="col-md-12">
+      <h1> Latest Blog Posts </h1>
+    </div>
 
-  <h1><a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a></h1>
-  <h3> {{post.author}} Date: {{post.created}}</h3>
-  <p>
-    {{post.content}}
-  </p>
-  <br>
-  <p>{{post.likes}}</p>
-  <a href ="vote?blog_post_id={{post.key.id()}}&value=1">Upvote!</a>
-  <a href ="vote?blog_post_id={{post.key.id()}}&value=-1">Downvote!</a>
+    <hr>
+  </section>
 
-  <br>
-{% endfor %}
+
+  <section class="row">
+
+    {% for post in post_query %}
+      <div class="col-md-12">
+        <h2><a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a></h2>
+        <p> (Posted {{post.created.strftime('%b %d, %Y')}} by {{post.author}}, Post Points: {{post.likes}})</p>
+        <h3>{{post.content}}</h3>
+        <a href="vote?blog_post_id={{post.key.id()}}&value=1">
+          <button type="button" class="btn btn-default btn-md">
+            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" ></span>
+          </button>
+        </a>
+
+        <a href="vote?blog_post_id={{post.key.id()}}&value=-1">
+          <button type="button" class="btn btn-default btn-md">
+            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" ></span>
+          </button>
+        </a>
+        <br>
+    </div>
+    {% endfor %}
+
+
+  </section>
 
 {% endblock %}
