Fixed login page by adding appropriate classes

--- a/templates/invalidCookie.html
+++ b/templates/invalidCookie.html
@@ -1,1 +1,1 @@
-{% extends "base.html" %} {% block content %}<h2>Please <a href="signup">sign up </a>or <a href="login">login</a></h2>{% endblock %}
+{% extends "base.html" %} {% block content %}<div class="row"><div class="col-md-12"><h2>Please <a href="signup">sign up </a>or <a href="login">login</a></h2></div></div>{% endblock %}
