--- a/templates/assets/invalidCookie.html
+++ b/templates/assets/invalidCookie.html
@@ -2,10 +2,16 @@
 
 {% block content %}
 
-  <h2>
-    Please <a href="signup"> sign up </a> or <a href="login"> login </a>
+  <div class="row">
+    <div class="col-md-12">
 
-  </h2>
+      <h2>
+        Please <a href="signup"> sign up </a> or <a href="login"> login </a>
+      </h2>
+
+    </div>
+  </div>
+
 
 
 {% endblock %}
