--- a/templates/assets/login.html
+++ b/templates/assets/login.html
@@ -2,26 +2,39 @@
 
 {% block content %}
 
-  <h1> Login</h1>
+  <section class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h1> Login</h1>
+    </div>
+  </section>
 
-  <form method = "post">
-   <label> Username </label>
-   <input type = "text" name = "username" value = "{{username}}" required=true >
-   <br>
+  <section class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-   <label> Password </label>
-   <input type = "password" name = "password" value = "{{password}}" required=true>
-   <br>
+      <form method = "post">
+        <div class="form-group">
+          <label> Username </label>
+          <input type="text" class="form-control" name="username" value="{{username}}" required=true >
+        </div>
 
-   <div> {{error}}</div>
+        <div class="form-group">
+          <label> Password </label>
+          <input type="password" class="form-control" name="password" value="{{password}}" required=true>
+        </div>
 
-   </div>
-   <input type = "submit">
-   <input type = "reset" >
-  </form>
+        <div> {{error}}</div>
 
-  <div>
-     <a href="signup"> Sign up?</a>
-  </div>
+        <button type="submit" class="btn btn-default"> Submit </button>
+        <button type="reset" class="btn btn-default"> Reset </button>
+      </form>
+
+      <br>
+      <div>
+         <a href="signup"> Sign up?</a>
+      </div>
+
+    </div>
+  </section>
+
 
 {% endblock %}
