--- a/templates/assets/sign_up.html
+++ b/templates/assets/sign_up.html
@@ -2,34 +2,48 @@
 
 {% block content %}
 
-  <h1> Signup</h1>
+  <section class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <h1> Register for an Account</h1>
+    </div>
+  </section>
 
-  <form method = "post">
-   <label> Username </label>
-   <input type = "text" name = "username" value = "{{username}}" required=true >
-   <br>
+  <section class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-   <label> Password </label>
-   <input type = "password" name = "password" value = "{{password}}" required=true>
-   <br>
+      <form method = "post">
+        <div class="form-group">
+          <label> Username </label>
+          <input type = "text" class="form-control" name = "username" value = "{{username}}" required=true >
+        </div>
 
+        <div class="form-group">
+          <label> Password </label>
+          <input type = "password" class="form-control" name = "password" value = "{{password}}" required=true>
+        </div>
 
-   <label> Verify password </label>
-   <input type = "password" name = "verifypw" value = "{{verifypw}}" required=true>
-   <br>
+        <div class="form-group">
+          <label> Verify password </label>
+          <input type = "password" class="form-control" name = "verifypw" value = "{{verifypw}}" required=true>
+        </div>
 
-   <label> Email (optional) </label>
-   <input type = "text" name = "email" value = "{{email}}">
-   <br>
+        <div class="form-group">
+          <label> Email (optional) </label>
+          <input type="text" class="form-control" name="email" value="{{email}}">
+        </div>
 
-   <div> {{errorUser}}</div>
-   <div> {{errorPass}}</div>
+        <div> {{errorUser}}</div>
+        <div> {{errorPass}}</div>
 
-   </div>
-   <input type = "submit">
-   <input type = "reset" >
-  </form>
+        <button type="submit" class="btn btn-default"> Submit </button>
+        <button type="reset" class="btn btn-default"> Reset </button>
+      </form>
 
-  <p> Have an account? </p>
-  <a href="login"> Login here</a>
+      <br>
+      <p> Have an account? </p>
+      <a href="login"> Login here</a>
+
+    </div>
+  </section>
+
 {% endblock %}
