Modified editPost to have glyphicons and look nice

--- a/templates/assets/notFound.html
+++ b/templates/assets/notFound.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 
-<h1> Blog Not Found!</h1>
-<h3> You can create one <a href='createPost'> here </a> though</h3>
+<section class="row">
+  <div class="col-md-12">
+
+    <h1> Blog Not Found!</h1>
+    <h3> You can create one <a href='createPost'> here </a> though</h3>
+    
+  </div>
+</section>
 
 {% endblock %}
