--- a/templates/assets/post.html
+++ b/templates/assets/post.html
@@ -14,7 +14,7 @@
 
       <form method="post">
         <div class="form-group">
-          <label for="male"> Subject: </label>
+          <label for="subject"> Subject: </label>
           <input type="text" class="form-control" name="title" required=true>
         </div>
 
