--- a/templates/assets/editPost.html
+++ b/templates/assets/editPost.html
@@ -3,41 +3,53 @@
 {% block content %}
 
 
-  <h1> Your Post </h1>
-  <hr>
+  <div class="row">
+    <div class="col-md-12">
+      <h1> Edit Post </h1>
+      <hr>
+    </div>
+  </div>
 
-  <h1> {{blog_query.title}} </h1>
-  <h3> {{blog_query.author}} Date: {{blog_query.created}}</h3>
-  <p>
-    {{blog_query.content}}
-  </p>
-  <br>
-  <p>{{blog_query.likes}}</p>
+  <section class="row">
+    <div class="col-md-12">
+      <h2> {{blog_query.title}} </h1>
+    </div>
 
-  {% if not error %}
-    <form method="post">
+    <div class="col-md-12">
+      <p> {{blog_query.author}}, {{blog_query.created.strftime('%b %d, %Y')}}, Post Points: {{blog_query.likes}} </p>
+    </div>
 
-      {% if blog_query.isRoot == True %}
-        <label>
-          <h2> Title </h2>
-          <input type = "text" name = "title" >
-        </label>
+    <div class="col-md-12">
+      <h3> {{blog_query.content}} </h3>
+    </div>
+  </section>
+
+  <section class="row">
+    <div class="col-md-12">
+      {% if not error %}
+        <form method="post">
+
+          {% if blog_query.isRoot == True %}
+            <div class="form-group">
+              <label for="subject"> Subject: </label>
+              <input type="text" class="form-control" name="title" required=true>
+            </div>
+          {% endif %}
+
+          <div class="form-group">
+            <label for="content"> Post Content: </label>
+            <textarea name="content" class="form-control" required=true rows="10"></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-default"> Submit </button>
+          <button type="submit" class="btn btn-default"><a href = "blogPost?blog_post_id={{blog_query.key.id()}}" > Cancel </a> </button>
+
+        </form>
+      {% else %}
+        <p> {{error}} </p>
+
       {% endif %}
-
-      <label>
-        <h2> Content </h2>
-        <textarea name="content"></textarea>
-      </label>
-
-      <br>
-      <input type="submit" >
-      <a href = "blogPost?blog_post_id={{blog_query.key.id()}}" > Cancel </a>
-
-    </form>
-  {% else %}
-    <p>  {{error}} </p>
-
-  {% endif %}
-
+    </div>
+  </section>
 
 {% endblock %}
