--- a/FrontEnd/assets/css/custom.css
+++ b/FrontEnd/assets/css/custom.css
@@ -11,18 +11,11 @@
   width: 100px;
   height: 100px; }
 
+.footer {
+  margin-top: 25px; }
+
 hr {
   border: solid 2px; }
-
-/* Color */
-.color_1 {
-  color: #02b3e4; }
-
-.color_2 {
-  color: #2d3c49; }
-
-.color_3 {
-  color: #7d97ad; }
 
 @media (max-width: 767px) {
   h1 {
