--- a/templates/assets/base.html
+++ b/templates/assets/base.html
@@ -7,18 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+    <!--BLOG METADATA-->
     <title> Multi User Blog </title>
     <meta name ="description" content="This multi blog projet developed by Jonathan Luu ">
+
+    <!--MINIFED CSS-->
     <link href="/FrontEnd/build/css/production.min.css" rel="stylesheet">
 
+    <!--USED FOR OPTIONAL ADDITIONAL HEADERS IN TEMPLATES-->
     {% block additonal_header %}
     {% endblock %}
+
   </head>
 
   <body>
 
+    <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-default navbar-fixed-top navbar-style">
-
       <div class = "container">
     	  <button type="button" class="navbar-toggle" data-toggle = "collapse" data-target=".navbar-collapse">
       	  <span class = "sr-only"> Toggle navigation </span>
@@ -27,17 +32,19 @@
     			<span class ="icon-bar"> </span>
     	  </button>
 
-    	  <a class = "navbar-brand" href="/">  {{user}}</a>
+        {% if user %}
+          <a class = "navbar-brand" href="/">  {{user}}</a>
+        {% endif %}
 
     	  <div class ="navbar-collapse collapse">
 
           {% if user %}
-              <ul class ="nav navbar-nav navbar-right">
-                <a class = "navbar-brand" href="/logout"> Logout </a>
-              </ul>
-              <ul class ="nav navbar-nav navbar-right">
-        		  	<a class = "navbar-brand" href="/createPost"> Create Post </a>
-        			</ul>
+            <ul class ="nav navbar-nav navbar-right">
+              <a class = "navbar-brand" href="/logout"> Logout </a>
+            </ul>
+            <ul class ="nav navbar-nav navbar-right">
+      		  	<a class = "navbar-brand" href="/createPost"> Create Post </a>
+      			</ul>
           {% else %}
             <ul class ="nav navbar-nav navbar-right">
               <a class = "navbar-brand" href="/signup"> Sign Up </a>
@@ -45,7 +52,6 @@
             <ul class ="nav navbar-nav navbar-right">
               <a class = "navbar-brand" href="/login"> Login </a>
             </ul>
-
           {% endif %}
 
           <ul class ="nav navbar-nav navbar-right">
@@ -57,28 +63,25 @@
     	</div>
     </nav>
 
-
-
-    <div class = "container top">
-
+    <!--CONTENT SECTION-->
+    <div class="container top">
       {% block content %}
       {% endblock %}
+    </div>
 
-
-
-      <!-- FOOTER -->
+    <!-- FOOTER -->
+    <div class="container">
       <footer class="row footer">
         <div class="col-md-12">
-
           <p class="pull-right"><a href="#">Back to top</a></p>
           <p>Built with <i class="fa fa-coffee" aria-hidden="true"></i> by Jonathan Luu </p>
-
         </div>
       </footer>
-
     </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/FrontEnd/build/js/production.min.js"></script>
 
