--- a/templates/assets/frontPage.html
+++ b/templates/assets/frontPage.html
@@ -19,19 +19,22 @@
         <h2><a href="blogPost?blog_post_id={{post.key.id()}}"> {{post.title}} </a></h2>
         <p> (Posted {{post.created.strftime('%b %d, %Y')}} by {{post.author}}, Post Points: {{post.likes}})</p>
         <h3>{{post.content}}</h3>
-        <a href="vote?blog_post_id={{post.key.id()}}&value=1">
-          <button type="button" class="btn btn-default btn-md">
-            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" ></span>
-          </button>
-        </a>
 
-        <a href="vote?blog_post_id={{post.key.id()}}&value=-1">
-          <button type="button" class="btn btn-default btn-md">
-            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" ></span>
-          </button>
-        </a>
+        {% if user != post.author %}
+          <a href="vote?blog_post_id={{post.key.id()}}&value=1">
+            <button type="button" class="btn btn-default btn-md">
+              <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" ></span>
+            </button>
+          </a>
+
+          <a href="vote?blog_post_id={{post.key.id()}}&value=-1">
+            <button type="button" class="btn btn-default btn-md">
+              <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" ></span>
+            </button>
+          </a>
+        {% endif %}
         <br>
-    </div>
+      </div>
     {% endfor %}
 
 
