--- a/templates/assets/blogPost.html
+++ b/templates/assets/blogPost.html
@@ -84,31 +84,32 @@
         <h4> {{comment.content}}</h3>
         <p> ---- {{comment.author}}, {{comment.created.strftime('%b %d, %Y')}}, Comment Points: {{comment.likes}} </p>
 
-        <a href="editPost?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}">
-          <button type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true" ></span>
-          </button>
-        </a>
+        {% if user == comment.author %}
+          <a href="editPost?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}">
+            <button type="button" class="btn btn-default btn-sm">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true" ></span>
+            </button>
+          </a>
 
-        <a href="deletePost?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}">
+          <a href="deletePost?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}">
 
-          <button type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true" ></span>
-          </button>
-        </a>
+            <button type="button" class="btn btn-default btn-sm">
+              <span class="glyphicon glyphicon-trash" aria-hidden="true" ></span>
+            </button>
+          </a>
+        {% else %}
+          <a href="vote?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}&value=1">
+            <button type="button" class="btn btn-default btn-sm">
+              <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" ></span>
+            </button>
+          </a>
 
-        <a href="vote?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}&value=1">
-          <button type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" ></span>
-          </button>
-        </a>
-
-        <a href="vote?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}&value=-1">
-          <button type="button" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" ></span>
-          </button>
-        </a>
-
+          <a href="vote?blog_post_id={{comment.key.id()}}&parent={{blog_query.key.id()}}&value=-1">
+            <button type="button" class="btn btn-default btn-sm">
+              <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" ></span>
+            </button>
+          </a>
+        {% endif %}
         <br>
         <br>
 
